--- a/style.css
+++ b/style.css
@@ -1,16 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 * {
     margin: 0px;
     padding: 0px;
+    font-family: 'Roboto', sans-serif;
 }
 .border {
     border: 2px solid black;
 }
+body {
+    background-color: black;
+    color: white;
+}
 .left {
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    margin-right: 10px;
     width: 25vw;
     padding: 10px;
 }
 .right {
     width: 75vw;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 10px;
 }
 .home ul li{
   width: 14px;
@@ -18,8 +31,94 @@
   gap: 15px;
   list-style: none;
   padding-top: 14px;
+  font-weight: bold;
 }
 .bg-black {
     background-color: black;
     color: white;
+}
+.heading {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  list-style: none;
+  padding-top: 14px;
+  font-weight: bold;
+  font-size: 10px;
+}
+.heading img {
+    width: 30px;
+}
+.library {
+    min-height: 80vh;
+    position: relative;
+    margin: 10px;
+
+}
+.footer {
+    display: flex;
+    font-size: 10px;
+    color: white;
+    text-decoration: none;
+    gap: 13px;
+    position: absolute;
+    bottom: 0;
+    padding: 10px;
+}
+.footer a{
+    color: grey;
+    text-decoration: none;
+}
+.right {
+    /* margin: 16px; */
+}
+
+.nav svg {
+    height: 20px;
+    width: 20px;
+}
+.header {
+    display: flex;
+    justify-content: space-between;
+    background-color: rgb(34,34,34);
+}
+.header > *{
+    padding: 20px;
+} 
+.spotifyPlaylists {
+    padding: 16px;
+}
+.card {
+    width: 200px;
+    padding: 10px;
+    border-radius: 8px;
+    background-color: #252525;
+    position: relative;
+}
+.cardcontainer {
+    margin: 30px;
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+}
+.card img {
+    width: 100%;
+    object-fit: contain;
+}
+.play {
+    width: 28px;
+    height: 28px;
+    background-color: #1fdf64;
+    border-radius: 50%;
+    border: 2px solid #000;
+    padding: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 168px;
+    right: 17px;
+    opacity: 0;
+    transition: all 1s ease-out;
 }
