--- a/utility.css
+++ b/utility.css
@@ -1,5 +1,5 @@
 .border {
-    border: 2px solid black ;
+    border: 2px solid red ;
     margin: 3px;
 }
 .flex {
@@ -19,10 +19,10 @@
     color: white;
 }
 .rounded {
-    border-radius: 7px;
+    border-radius: 10px;
 }
 .m-1 {
-    margin: 5px;
+    margin: 3px;
 }
 .p-1 {
     padding: 10px;
